--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ remote_theme: "pmarsceill/just-the-docs"
 #plugins:
 #  - jekyll-feed
 
-exclude: [ "sources", "code-examples", "start.sh", ".idea" ]
+exclude: [ "sources", "start.sh", ".idea" ]
 search_enabled: false
 heading_anchors: false
 
